[package]
name = "example-cf-nats-ws"
version = "0.1.0"
edition = "2024"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.8"
worker-macros = "0.8"
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "js"] }
wasm-bindgen = "0.2"
cf-nats-ws = { path = "../" }
futures = "0.3.31"
