[package]
name = "test-worker"
version = "0.1.0"
edition = "2024"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7"
worker-macros = "0.7"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
cf-nats-ws = { path = "../.." }
